--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="ko">
 <head>
  <meta charset="UTF-8">
- <title>퀴즈 프로그램 만들기 문제1</title>
+ <title>3.6.5! 수학 BARO 세우기 퀴즈</title>
 </head>
 <body>
 <div id = "quiztitles" style="margin-left:25px; background-color: #F8FBEF; height: auto; width:615px; ">
